# atom-agent-server

./: .env  .gitignore  README.md  client.py  pyproject.toml  server.sh
agent_backend/: __init__.py  agent_runner.py  cli_runner.py  config.py  factory.py  feishu_fetch_meta.py  lark_doc_comment_tool.py  main.py  memory_store.py  redis_store.py  runtime_spike.py  session_locks.py  session_memory.py  store.py  store_protocol.py  tasks_execution.py  worker.py
agent_backend/api/: __init__.py  routes.py
agent_backend/examples/: __init__.py  client_sse.py  demo_cli.py
docs/superpowers/specs/: 2026-04-13-agentscope-backend-design.md
scripts/: lark_doc_comment.py
tests/: conftest.py  test_client_should_emit.py  test_feishu_fetch_meta.py  test_lark_doc_comment_tool.py  test_load.py  test_memory_store.py  test_redis_integration.py  test_session_memory.py  test_smoke.py
