[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-backend"
version = "0.1.0"
description = "AgentScope long-task backend with Redis queue, WS/SSE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentscope>=1.0.0,<2",
    "agentscope-runtime>=1.1.0,<2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["agent_backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
